# bntu-platform

./: .gitignore  Dockerfile  Dockerfile-builder  Makefile  docker-compose.yml  pyproject.toml  runner.py
migration/: dump.sql
src/: __init__.py  app.py  config.py  exceptions.py
src/common/: crypto.py  envs.py  flask_auth.py  json_loader.py
src/db/: database_client.py
src/models/: authorization.py  canteens.py  divisions.py  files.py  posts.py  retakes.py  user.py
src/repositories/: __init__.py  db_repo.py  minio_client.py  s3_repo.py
src/routes/: __init__.py  auth.py  canteens.py  divisions.py  files.py  pages.py  posts.py  retakes.py  schedules.py  users.py
src/services/: __init__.py  auth_service.py  base_service.py  canteens.py  divisions_service.py  files_service.py  retakes_service.py  user_service.py
tests/unit/: conftest.py
tests/unit/dummy/: conftest.py  test_dummy.py
views/: authorisation.html  authorization.html  canteen_worker.html  canteens.html  dean's_office.html  deans_office.html  departments.html  faculties.html  group.html  groups.html  index.html  lecturer.html  projectX.html  student.html  student_view.html  teacher.html  teacher_view.html
views/css/: post.css  style.css
views/html/: index.html
views/img/: MAINBG.jpg~
views/js/: auth.js  canteen_worker.js  canteens.js  dean's_office.js  deans_office.js  departments.js  faculties.js  group.js  groups.js  logout.js  mainRedirect.js  requests.js  student.js  teacher.js  teacher_view.js
views2/: authorization.html  faculties.html  index.html  student.html
