[tool.poetry]
name = "bntu-platform"
version = "0.1.0"
description = "Online platform for university services. BNTU graduation project"
authors = ["Danila Kislitsyn <dangost16@gmail.com>"]
readme = "README.md"
packages = [{include = "bntu_platform"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
flask = "^2.3.1"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
waitress = "^2.1.2"
pyjwt = "^2.6.0"
caspius = "^1.2"
minio = "^7.1.14"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pylint = "^2.17.3"
poethepoet = "^0.19.0"
pyinstaller = "^5.10.1"
requests = "^2.31.0"

[tool.poe.tasks]
tests = 'python -m pytest ./tests'
format = 'black ./'
lint-src = 'pylint ./src'
lint-tests = 'pylint ./tests'
precommit = ['format', 'lint-src', 'lint-tests', 'tests']

[tool.pylint.BASIC]
good-names = ["id", "db", "e", "f", "fs","ip"]
extension-pkg-whitelist = ["falcon"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "fixme",
    "unused-argument",
    "no-self-use",
    "too-many-instance-attributes",
    "cyclic-import",
    "useless-option-value",
    "pointless-string-statement",
    "invalid-name",
    "raise-missing-from",
    "too-many-locals",
    "duplicate-code"
]

[tool.pylint.DESIGN]
max-args = 6
min-similarity-lines = 5
ignore-imports='y'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
